--- a/translations/security.fr.xlf
+++ b/translations/security.fr.xlf
@@ -31,7 +31,7 @@
       </trans-unit>
       <trans-unit id="dLzMRPR" resname="Invalid CSRF token.">
         <source>Invalid CSRF token.</source>
-        <target>Jeton CSRF invalide.</target>
+        <target>Identifiants invalides</target>
       </trans-unit>
       <trans-unit id="PhhlLem" resname="No authentication provider found to support the authentication token.">
         <source>No authentication provider found to support the authentication token.</source>
